--- a/ws-android/Dockerfile
+++ b/ws-android/Dockerfile
@@ -21,9 +21,10 @@ RUN chmod -R 774 /home/ubuntu/workspace && \
 RUN touch /etc/profile.d/android.sh && \
     chmod -R 775 /etc/profile.d/android.sh && \
     chown -R ubuntu:ubuntu /etc/profile.d/android.sh && \
-    printf "#!/bin/bash\n\n" > /etc/profile.d/android.sh    
+    printf "#!/bin/bash\n\n" > /etc/profile.d/android.sh  && \
+    printf "echo 'Setting up environment variables'\n" > /etc/profile.d/android.sh     
     
-    
+ echo 'Setting up environment variables'   
 # Update, upgrade and install packages
 RUN \
     apt-get update && \
