--- a/ws-android/Dockerfile
+++ b/ws-android/Dockerfile
@@ -22,7 +22,7 @@ RUN touch /etc/profile.d/android.sh && \
     chmod -R 775 /etc/profile.d/android.sh && \
     chown -R ubuntu:ubuntu /etc/profile.d/android.sh && \
     printf "#!/bin/bash\n\n" > /etc/profile.d/android.sh  && \
-    printf "echo 'Setting up environment variables'\n" > /etc/profile.d/android.sh     
+    printf "echo 'Setting up environment variables'\n" >> /etc/profile.d/android.sh     
     
  
 # Update, upgrade and install packages
