--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -80,8 +80,12 @@ RUN apt-get install -y xvfb tightvncserver x11vnc novnc xterm fluxbox
 RUN apt-get install -y firefox chromium-browser
 
 # servers
-RUN apt-get install -y redis-server redis-tools nginx postgresql-9.3
+RUN apt-get install -y redis-server redis-tools nginx
 RUN apt-get install -y mysql-server rabbitmq-server couchdb
+
+# Postgres
+RUN apt-get install -y postgresql-9.3
+RUN sudo -u postgres createuser -sd ubuntu
 
 # tools
 RUN apt-get install -y dnsutils bash-completion xsltproc \
