--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -19,7 +19,7 @@ RUN add-apt-repository -y ppa:git-core/ppa
 RUN dpkg --add-architecture i386 && \
     apt-get update --fix-missing && \
     apt-get install -y libc6:i386 libncurses5:i386 libstdc++6:i386
-RUN apt-get install -y bash console-setup sudo wget curl git python man-db && \
+RUN apt-get install -y bash console-setup sudo wget curl git python python-pip man-db && \
     echo "install console-setup" && \
     echo "console-setup   console-setup/codeset47 select  # Latin1 and Latin5 - western Europe and Turkic languages" | debconf-set-selections && \
     echo "console-setup   console-setup/fontface47        select  Fixed" | debconf-set-selections && \
@@ -106,7 +106,7 @@ RUN sudo -u ubuntu -i bash -l -c " \
 # Can't include new npm since it makes "npm install -g npm" fail:
 # sudo -u ubuntu -i bash -l -c "npm install -g npm@3.3.6" && \
 RUN wget -qO- https://toolbelt.heroku.com/install-ubuntu.sh | sh -e
-RUN yes no | heroku
+RUN sudo -u ubuntu -i heroku
 RUN sudo -u ubuntu -i bash -l -c "npm install jitsu@0.15.0 -g && \
                                   npm install azure-cli@0.9.9 -g && \
                                   npm install grunt@0.4.5 -g && \
