--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -80,13 +80,13 @@ RUN apt-get install -y xvfb tightvncserver x11vnc novnc xterm fluxbox
 RUN apt-get install -y firefox chromium-browser
 
 # servers
-RUN apt-get install -y redis-server redis-tools nginx
-RUN apt-get install -y mysql-server rabbitmq-server couchdb
+RUN apt-get install -y redis-server redis-tools nginx mysql-server \
+    rabbitmq-server couchdb
 
 # Postgres
-RUN apt-get install -y postgresql-9.3
-RUN sudo -u postgres createuser -srd ubuntu
-RUN sudo -u postgres psql -c "create database ubuntu owner=ubuntu"
+RUN apt-get install -y postgresql-9.3 && \
+    sudo -u postgres createuser -srd ubuntu && \
+    sudo -u postgres psql -c "create database ubuntu owner=ubuntu"
 
 # tools
 RUN apt-get install -y dnsutils bash-completion xsltproc \
