--- a/ws-android/Dockerfile
+++ b/ws-android/Dockerfile
@@ -79,6 +79,8 @@ RUN gradle
 
 RUN chown -R ubuntu:ubuntu /home/ubuntu && \
     chmod 775 /home/ubuntu/start-here && \
-    cd /home/ubuntu/workspace
-    
+    cd /home/ubuntu/workspace && \
+    ln -s /usr/local/android-sdk-linux /home/ubuntu/workspace/android-SDK-link && \
+    ln -s /usr/local/gradle-2.9 /home/ubuntu/workspace/Gradle-link && \
+    ln -s /homeubuntu/start-here /home/ubuntu/workspace/start-here-link
 
