--- a/ws-android/Dockerfile
+++ b/ws-android/Dockerfile
@@ -76,11 +76,12 @@ RUN gradle
 
 
 # -------------------------- Final Cloud 9 Installation Actions -----------------------------------------
-
+#set ownership, a few symlinks and auto activate the startup a00-auto-ant-gradle.sh bash file
 RUN chown -R ubuntu:ubuntu /home/ubuntu && \
     chmod 775 /home/ubuntu/start-here && \
     cd /home/ubuntu/workspace && \
     ln -s /usr/local/android-sdk-linux /home/ubuntu/workspace/android-SDK-link && \
     ln -s /usr/local/gradle-2.9 /home/ubuntu/workspace/Gradle-link && \
-    ln -s /homeubuntu/start-here /home/ubuntu/workspace/start-here-link
+    ln -s /homeubuntu/start-here /home/ubuntu/workspace/start-here-link && \
+    bash a00-auto-ant-gradle.sh
 
