--- a/ws-android/Dockerfile
+++ b/ws-android/Dockerfile
@@ -80,6 +80,7 @@ RUN gradle
 RUN chmod 775 /home/ubuntu/start-here && \
     cd /home/ubuntu/workspace && \
     ln -s /usr/local/android-sdk-linux /home/ubuntu/workspace/android-SDK-link && \
+    ln -s /usr/lib/jvm/java-7-openjdk-amd64 /home/ubuntu/workspace/openjdk-link && \
     ln -s /usr/local/gradle-2.9 /home/ubuntu/workspace/Gradle-link && \
     ln -s /homeubuntu/start-here /home/ubuntu/workspace/start-here-link  && \
     sudo bash /home/ubuntu/start-here/a00-auto-ant-gradle.sh 
