moving auto-Ant and Gradle.sh to the batch file

--- a/ws-android/Dockerfile
+++ b/ws-android/Dockerfile
@@ -83,6 +83,5 @@ RUN chmod 775 /home/ubuntu/start-here && \
     ln -s /usr/local/android-sdk-linux /home/ubuntu/workspace/android-SDK-link && \
     ln -s /usr/lib/jvm/java-7-openjdk-amd64 /home/ubuntu/workspace/openjdk-link && \
     ln -s /usr/local/gradle-2.9 /home/ubuntu/workspace/Gradle-link && \
-    ln -s /homeubuntu/start-here /home/ubuntu/workspace/start-here-link  && \
-    sudo bash /home/ubuntu/start-here/a00-auto-ant-gradle.sh 
+    ln -s /homeubuntu/start-here /home/ubuntu/workspace/start-here-link  
 
