--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -132,8 +132,9 @@ ADD ./files/etc /etc
 ADD ./files/home /home
 ADD ./files/gitignore /home/ubuntu/.gitignore
 RUN cp /home/ubuntu/.gitignore /home/ubuntu/.hgignore && \
-    mkdir -p /home/ubuntu/lib/apache2/lock /home/ubuntu/lib/apache2/log /home/ubuntu/lib/apache2/run && \
+    mkdir -p /home/ubuntu/lib/apache2/lock /home/ubuntu/lib/apache2/log /home/ubuntu/lib/apache2/run /home/ubuntu/.ssh && \
     cd /home/ubuntu && \
+    chmod 700 .ssh && \
     chown -R ubuntu: .bash* .gemrc lib .*ignore .ssh && \
     chown ubuntu: .
 
