--- a/ws-android/Dockerfile
+++ b/ws-android/Dockerfile
@@ -11,6 +11,8 @@ MAINTAINER Jeremy Ellis <keyfreemusic@gmail.com>
 ADD ./files /home/ubuntu
 ADD ./files/profile.d-android.sh /etc/profile.d/android.sh
 
+# would like to make this chmod a+x for /etc/profile.d/android.sh
+
 # These commands just let us test the enviornment before submitting to cloud 9    
 #ENV JAVA_HOME /usr/lib/jvm/java-7-openjdk-amd64
 #ENV PATH $PATH:$JAVA_HOME/bin
@@ -20,6 +22,8 @@ ADD ./files/profile.d-android.sh /etc/profile.d/android.sh
 # -------------------------- Install necessary base packages ----------------------------------------- 
 
 RUN chown -R ubuntu:ubuntu /home/ubuntu && \
+    chown -R ubuntu:ubuntu /etc/profile.d/android.sh && \
+    chmod a+x /etc/profile.d/android.sh && \
     apt-get update && \
     apt-get -y install curl unzip python-software-properties software-properties-common lib32stdc++6 lib32z1
 
