--- a/ws-android/Dockerfile
+++ b/ws-android/Dockerfile
@@ -5,18 +5,30 @@ FROM cloud9/workspace
 # https://github.com/lukin0110/docker-android-build
 MAINTAINER Jeremy Ellis <keyfreemusic@gmail.com>
 
-ADD ./files/workspace /home/ubuntu/workspace
+# -------------------------- Transfer from Cloud9 Github to Docker -----------------------------------------
+# The Github is at https://github.com/c9/templates/tree/master/ws-android
 
-RUN chmod -R g+w /home/ubuntu/workspace && \
-    chown -R ubuntu:ubuntu /home/ubuntu/workspace
-    
-# Update, upgrade and install packages
-RUN \
+ADD ./files /home/ubuntu
+ADD ./files/profile.d-android.sh /etc/profile.d/android.sh
+
+
+# These commands just let us test the enviornment before submitting to cloud 9    
+#ENV JAVA_HOME /usr/lib/jvm/java-7-openjdk-amd64
+#ENV PATH $PATH:$JAVA_HOME/bin
+
+
+
+# -------------------------- Install necessary base packages ----------------------------------------- 
+
+RUN chown -R ubuntu:ubuntu /home/ubuntu && \
     apt-get update && \
-    apt-get -y install curl unzip python-software-properties software-properties-common lib32stdc++6 lib32z1
+    apt-get -y install curl unzip python-software-properties software-properties-common openjdk-7-jdk lib32stdc++6 lib32z1
 
-# Install Android SDK
-# https://developer.android.com/sdk/index.html#Other
+
+# -------------------------- Install the Android SDK -----------------------------------------
+
+# refer to https://developer.android.com/sdk/index.html#Other
+
 RUN SDK_VERSION=r24.3.3 && \
     set -x && \
     cd /usr/local/ && \
@@ -27,35 +39,49 @@ RUN SDK_VERSION=r24.3.3 && \
     bash -c 'for file in $(find /usr/local/android-sdk-*); do [[ -x $file ]] && chmod +x "$file"; done'; \
     exit 0
 
-# Install Android NDK
-# https://developer.android.com/tools/sdk/ndk/index.html
-# https://developer.android.com/ndk/index.html
-RUN NDK_VERSION=r10e && \
-    cd /usr/local && \
-    curl -L -o android-ndk.bin http://dl.google.com/android/ndk/android-ndk-${NDK_VERSION}-linux-x86_64.bin && \
-    chmod a+x android-ndk.bin && \
-    ./android-ndk.bin && \
-    rm -f android-ndk.bin && \
-    chmod -R +r /usr/local/android-ndk-* && \
-    bash -c 'for file in $(find /usr/local/android-ndk-*); do [[ -x $file ]] && chmod +x "$file"; done'
+# Android SDK Home and Path for pre-cloud9 testing
+#ENV ANDROID_SDK_HOME /usr/local/android-sdk-linux
+#ENV ANDROID_HOME /usr/local/android-sdk-linux
+#ENV PATH $PATH:$ANDROID_SDK_HOME
+#ENV PATH $PATH:$ANDROID_SDK_HOME/tools
+#ENV PATH $PATH:$ANDROID_SDK_HOME/platform-tools
 
-# Install Gradle
-RUN GRADLE_VERSION=2.5 && \
-    cd /usr/local && \
-    curl -L https://services.gradle.org/distributions/gradle-${GRADLE_VERSION}-bin.zip -o gradle-bin.zip && \
-    unzip gradle-bin.zip && \
-    rm gradle-bin.zip
+# -------------------------- Install the Android Platforms -----------------------------------------
 
-# Update & Install Android Tools
-RUN for filter in tools,platform-tools,android-20,android-22,android-23,extra,build-tools-23.0.2; do \
+# This fancy "for" loop solves an install issue
+RUN for filter in tools platform-tools android-20 android-22 android-23 extra build-tools-23.0.2; do \
         echo y | /usr/local/android-sdk-linux/tools/android update sdk --filter $filter --no-ui --force --all; \
     done
 
-# Set PATH
-RUN \
-    echo 'export ANDROID_HOME=/usr/local/android-sdk-linux' > /etc/profile.d/android.sh && \
-    echo 'export ANDROID_SDK_HOME=/usr/local/android-sdk-linux' >> /etc/profile.d/android.sh && \
-    echo 'export ANDROID_NDK_HOME=/usr/local/android-ndk-r10e' >> /etc/profile.d/android.sh && \
-    echo 'export GRADLE_HOME=/usr/local/gradle-2.5' >> /etc/profile.d/android.sh && \
-    echo 'export NDK_PROJECT_PATH=/home/ubuntu/workspace' >> /etc/profile.d/android.sh && \
-    echo 'export PATH=$PATH:$ANDROID_HOME/tools:$ANDROID_NDK_HOME/platform-tools:$ANDROID_NDK_HOME:$GRADLE_HOME/bin' >> /etc/profile.d/android.sh
+
+
+# -------------------------- Install Gradle -----------------------------------------
+
+ENV GRADLE_VERSION 2.9
+
+RUN cd /usr/local && \
+    curl -L https://services.gradle.org/distributions/gradle-${GRADLE_VERSION}-bin.zip -o gradle-bin.zip && \
+    unzip gradle-bin.zip && \
+    rm gradle-bin.zip  && \
+    chmod -R +r /usr/local/gradle-${GRADLE_VERSION} && \
+    bash -c 'for file in $(find /usr/local/gradle-${GRADLE_VERSION}); do [[ -x $file ]] && chmod +x "$file"; done'; \
+    exit 0
+
+#Gradle Home and Path for pre-cloud9 testing
+#ENV GRADLE_HOME /usr/local/gradle-${GRADLE_VERSION}
+#ENV PATH $PATH:$GRADLE_HOME/bin
+
+
+# activate gradle by running it once    
+#RUN gradle
+
+
+# -------------------------- Final Cloud 9 Installation Actions -----------------------------------------
+#set ownership, a few symlinks and auto activate the startup a00-auto-ant-gradle.sh bash file
+RUN chmod 775 /home/ubuntu/start-here && \
+    cd /home/ubuntu/workspace && \
+    ln -s /usr/local/android-sdk-linux /home/ubuntu/workspace/android-SDK-link && \
+    ln -s /usr/lib/jvm/java-7-openjdk-amd64 /home/ubuntu/workspace/openjdk-link && \
+    ln -s /usr/local/gradle-2.9 /home/ubuntu/workspace/Gradle-link && \
+    ln -s /homeubuntu/start-here /home/ubuntu/workspace/start-here-link  
+
