--- a/ws-python/Dockerfile
+++ b/ws-python/Dockerfile
@@ -3,6 +3,7 @@ MAINTAINER Cloud9 IDE, inc. <info@c9.io>
 
 RUN pip install Django==1.9
 
+RUN rm -rf /home/ubuntu/workspace
 ADD ./files /home/ubuntu
 
 RUN chown -R ubuntu:ubuntu /home/ubuntu/workspace && \
