Change to node v6 by default

--- a/ws-nodejs/Dockerfile
+++ b/ws-nodejs/Dockerfile
@@ -6,6 +6,7 @@ RUN sudo -u ubuntu -i bash -l -c " \
     nvm install 0.10 && \
     nvm install 0.12 && \
     nvm install iojs-v3.3.1 && \
+    nvm install 4 && \
     nvm install 5"
 
 RUN rm -rf /home/ubuntu/workspace && \
